ainesosasivu edelleen rikki

--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -123,7 +123,7 @@
 
             <article>
                 <p>Olet saapunut ainesosan <span th:text="${aines.nimi}">aines</span> omalle sivulle. 
-                    <span th:text="${aines.nimi}">aines</span> on ainesosana <span th:text="${suurin}"></span>
+                    <span th:text="${aines.nimi}">aines</span> on ainesosana <span th:text="${suurin}">suurin</span>
                      smoothiessa. Sivulla luettelo smoothieista, jotka sisältävät sitä.</p>
 
                 <br/>
