--- a/src/main/resources/templates/annos.html
+++ b/src/main/resources/templates/annos.html
@@ -107,7 +107,7 @@
     <body>
         <div class="container">
             <header>
-                <h1>Smoothie-annos nimeltä <span th:text="${annos.nimi}">annos</span>!</h1>
+                <h1>Smoothie nimeltä <span th:text="${annos.nimi}">annos</span>!</h1>
             </header>
 
             <nav>
@@ -120,8 +120,8 @@
             </nav>
 
             <article>
-                <p>Olet saapunut annoksen <span th:text="${annos.nimi}">annos</span> omalle sivulle. 
-                    Sivulla luettelo smoothien raaka-aineista sekä ohjeita.</p>
+                <p>Tervetuloa annoksen <span th:text="${annos.nimi}">annos</span> omalle sivulle. 
+                    Sivulla luettelo smoothien raaka-aineista, niiden lisäämisjärjestys sekä ohjeita.</p>
 
                 <br/>
 
