--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -123,11 +123,11 @@
 
             <article>
                 <p>Täällä pääset tarkastelemaan smoothieita, joissa on raaka-ainetta
-                     <span th:text="${aines.nimi}">aines</span>.
+                    <span th:text="${aines.nimi}">aines</span>.</p>
 
                 <br/>
 
-                <h4>Osana <span th:text="${#lists.size(annokset)}"></span> smoothieta:</h4><br/>
+                <h4>Käytetty smoothieissa <span th:text="${#lists.size(annokset)}"></span> kertaa:</h4><br/>
 
 
                 <ol>
