html-sivujen linkkien nimiä muokattu

--- a/src/main/resources/templates/ainekset.html
+++ b/src/main/resources/templates/ainekset.html
@@ -16,7 +16,7 @@
             <nav>
                 <ul>
                     <li><a href="../">Etusivu</a></li>
-                    <li><a href="/annokset">Luo uusi smoothie</a></li>
+                    <li><a href="/annokset">Lisää ja muokkaa smoothieita</a></li>
                     <li><a href="/tilasto">Tilastot</a></li>
                 </ul>
             </nav>
