--- a/src/main/resources/templates/ainesosa.html
+++ b/src/main/resources/templates/ainesosa.html
@@ -114,7 +114,7 @@
             <nav>
                 <ul>
                     <li><a href="../">Etusivu</a></li>
-                    <li><a href="/annokset">Luo uusi smoothie</a></li>
+                    <li><a href="/annokset">Lisää ja muokkaa smoothieita</a></li>
                     <li><a href="/ainekset">Lisää ja muokkaa raaka-aineita</a></li>
                     <li><a href="/tilasto">Tilastot</a></li>
                 </ul>
@@ -122,7 +122,7 @@
             </nav>
 
             <article>
-                <p>Täällä pääset tarkastelemaan smoothieita, joissa on raaka-ainetta
+                <p>Täällä näet smoothiet, joissa on raaka-ainetta
                     <span th:text="${aines.nimi}">aines</span>.</p>
 
                 <br/>
