--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
 
             <nav>
                 <ul>
-                    <li><a href="/annokset">Luo uusi smoothie</a></li>
+                    <li><a href="/annokset">Lisää ja muokkaa smoothieita</a></li>
                     <li><a href="/ainekset">Lisää ja muokkaa raaka-aineita</a></li>
                     <li><a href="/tilasto">Tilastot</a></li>
                 </ul>
