--- a/src/main/resources/templates/tilasto.html
+++ b/src/main/resources/templates/tilasto.html
@@ -17,7 +17,7 @@
             <nav>
                 <ul>
                     <li><a href="../">Etusivu</a></li>
-                    <li><a href="/annokset">Luo uusi smoothie</a></li>
+                    <li><a href="/annokset">Lisää ja muokkaa smoothieita</a></li>
                     <li><a href="/ainekset">Lisää ja muokkaa raaka-aineita</a></li>
                 </ul>
             </nav>
