--- a/src/main/resources/templates/annokset.html
+++ b/src/main/resources/templates/annokset.html
@@ -24,7 +24,7 @@
                 <ol>
                     <li th:each="annos: ${annokset}">
                         <a th:href="${'/annokset/' + annos.id}"><span th:text="${annos.nimi}"></span></a>
-                        <form th:action="${'annokset/' + annos.id + '/poista'}" method='POST'> 
+                        <form th:action="${'annokset/' + annos.id + '/poistahan'}" method='POST'> 
                             <input type="submit" value="Poista"/>
                         </form>  
                     </li>
